--- a/src/com/ulatina/grupo5/vista/Ganancias_Admin_Empleado.form
+++ b/src/com/ulatina/grupo5/vista/Ganancias_Admin_Empleado.form
@@ -77,10 +77,6 @@
                                       </Group>
                                   </Group>
                               </Group>
-                              <Group type="102" attributes="0">
-                                  <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
-                                  <Component id="ddlFiltroSec" min="-2" pref="185" max="-2" attributes="0"/>
-                              </Group>
                               <Group type="102" alignment="0" attributes="0">
                                   <Component id="JLabelFechaInicio" min="-2" max="-2" attributes="0"/>
                                   <EmptySpace min="-2" pref="36" max="-2" attributes="0"/>
@@ -91,6 +87,10 @@
                                       </Group>
                                       <Component id="dateChFechaFinal" max="32767" attributes="0"/>
                                   </Group>
+                              </Group>
+                              <Group type="102" alignment="1" attributes="0">
+                                  <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
+                                  <Component id="ddlFiltroSec" min="-2" pref="214" max="-2" attributes="0"/>
                               </Group>
                           </Group>
                           <EmptySpace min="-2" pref="27" max="-2" attributes="0"/>
