--- a/src/com/ulatina/grupo5/vista/Registro_Atracciones_Admin.form
+++ b/src/com/ulatina/grupo5/vista/Registro_Atracciones_Admin.form
@@ -120,8 +120,10 @@
                                           <EmptySpace max="-2" attributes="0"/>
                                           <Component id="txtPrecio" min="-2" pref="141" max="-2" attributes="0"/>
                                       </Group>
-                                      <Component id="ddlRangoEdadMin" min="-2" pref="64" max="-2" attributes="0"/>
-                                      <Component id="ddlRangoEdadMax" alignment="0" min="-2" pref="64" max="-2" attributes="0"/>
+                                      <Group type="103" alignment="0" groupAlignment="1" max="-2" attributes="0">
+                                          <Component id="ddlRangoEdadMax" alignment="0" pref="95" max="32767" attributes="0"/>
+                                          <Component id="ddlRangoEdadMin" alignment="0" max="32767" attributes="0"/>
+                                      </Group>
                                   </Group>
                                   <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
                               </Group>
